<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eTcoDesignerTriggerType" Id="{aa527af0-ae4d-012b-3a7b-f57805b5b49a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eTcoDesignerTriggerType : 
(
    Trigger := 0,
    TriggerFast := 1,
    TriggerWithTimeout := 2
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>